# clite

./: .flake8  .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml  pr.yaml  pre-commit_main.yaml  pre-commit_pr.yaml
clite/src/: __main__.py  command.py  errors.py  exec.py
clite/src/commands/: commands.py  version.py
requirements/: base.txt  dev.txt
src/clite/: __init__.py  __main__.py  __main__.pyi  command.py  command.pyi  exec.py  exec.pyi
src/clite/commands/: commands.py  commands.pyi  version.py  version.pyi
src/clite/util/: platform.py  platform.pyi  version.py
tests/: test_commands.py  test_version.py
