[project]
name = "clite"
description = "A CLI to help create and centralize many small, dissimilar utilities."
dynamic = ["version"]
authors = [
    {name = "Scott Smith", email = "scott@ohlol.net"},
]
dependencies = [
    "importlib-resources>=5.9.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
clite = "clite.__main__:main_or_fail"

[tool.black]
line-length = 79
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
includes = ["src/clite"]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
