[build-system]
requires = ["setuptools>=69.1", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clite"
description = "A CLI to help create and centralize many small, dissimilar utilities."
authors = [
    {name = "Scott Smith", email = "scott@smith.me"},
]
dependencies = [
    "importlib-resources>=6.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pip-tools",
    "pre-commit",
]

[project.scripts]
clite = "clite.__main__:main_or_fail"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
strict = true

[tool.setuptools_scm]
